# dynamicMatrices

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: BuildAndTest.yml
src/: CMakeLists.txt
src/dynamicMatrices/: baseDynamicMatrix.hpp  dynamicMatrices.hpp  dynamicMatrix.hpp  triangularDynamicMatrices.hpp
tests/: CMakeLists.txt  MatricesTests.cpp  test.cxx
